[package]
name = "mega_etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
mysql_async_wasi = "0.30"
thiserror = "1.0"
url = "2.3.1"
hyper_wasi = {version = "0.15.0", features = ["full"]}
anyhow = "1.0.65"
tokio_wasi = {version = "1.21", features = ["net"]}
log = "0.4.17"