[package]
name = "mega_etl"
version = "0.1.1"
edition = "2021"
authors = ["Tricster <mediosrity@gmail.com>", "Michael Yuan <michael@secondstate.io>", "Miley Fu <furao@secondstate.io>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/second-state/MEGA"
homepage = "https://github.com/second-state/MEGA"
description = """
A cloud-native ETL (Extract, Transform, Load) application framework based on the WasmEdge WebAssembly runtime for developers to filter, map, and transform data pipelines going into cloud databases.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["etl", "database", "streaming", "serverless", "wasm"]


[dependencies]
async-trait = "0.1.57"
mysql_async_wasi = "0.31"
thiserror = "1.0"
url = "2.3.1"
hyper_wasi = {version = "0.15", features = ["full"]}
anyhow = "1.0.65"
tokio_wasi = {version = "1", features = ["net"]}
log = "0.4.17"
rskafka_wasi = "0.3"
futures-util = "0.3"
